[package]
name = "octobuild"
build = "src/build.rs"
version = "0.0.15"
authors = [ "Artem V. Navrotskiy <bozaro@users.noreply.github.com>" ]

[profile.bench]
debug = true

[[bin]]
name = "octo_cl"
test = false

[[bin]]
name = "octo_coordinator"
test = false

[[bin]]
name = "xgconsole"
test = false

[dependencies]
daemon = "*"
iron = "*"
filetime = "*"
lz4 = "*"
libc = "*"
petgraph = "*"
xml-rs = "*"
uuid = "*"
tempdir = "*"

[target.i686-pc-windows-gnu.dependencies]
winapi = "*"
kernel32-sys = "*"

[target.x86_64-pc-windows-gnu.dependencies]
winapi = "*"
kernel32-sys = "*"

[build-dependencies]
capnpc = "*"
